 * Added a new option, l, which will disable local call optimization for
   channels involved with the FollowMe thread.  Use this option to improve
   compatability for a FollowMe call with certain dialplan apps, options, and
   functions.

CEL
--------------------------
 * cel_pgsql now supports the 'extra' column for data added using the
   CELGenUserEvent() application.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.2 to Asterisk 1.8 ----------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added preferred_codec_only option in sip.conf. This feature limits the joint
   codecs sent in response to an INVITE to the single most preferred codec.
 * Added SIP_CODEC_OUTBOUND dialplan variable which can be used to set the codec
   to be used for the outgoing call. It must be one of the codecs configured
   for the device.
 * Added tlsprivatekey option to sip.conf.  This allows a separate .pem file
   to be used for holding a private key.  If tlsprivatekey is not specified,
   tlscertfile is searched for both public and private key.
 * Added tlsclientmethod option to sip.conf.  This allows the protocol for
   outbound client connections to be specified.
 * The sendrpid parameter has been expanded to include the options
   'rpid' and 'pai'. Setting sendrpid to 'rpid' will cause Remote-Party-ID
   header to be sent (equivalent to setting sendrpid=yes) and setting
   sendrpid to 'pai' will cause P-Asserted-Identity header to be sent.
 * The 'ignoresdpversion' behavior has been made automatic when the SDP received
   is in response to a T.38 re-INVITE that Asterisk initiated. In this situation,
   since the call will fail if Asterisk does not process the incoming SDP, Asterisk
   will accept the SDP even if the SDP version number is not properly incremented,